fix scrolling and overflows

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -19,8 +19,11 @@ body > header {
   display: flex;
   align-items: center;
   justify-content: stretch;
+  width: 100vw;
   height: 88px;
   padding: 0 24px;
+  position: fixed;
+  z-index: 99;
 
   @include media(">sm") {
     height: 152px;
@@ -191,15 +194,21 @@ body {
 
 main {
   min-height: calc(100vh - 160px);
+  overflow: hidden;
 
   @include media(">sm") {
     min-height: calc(100vh - 304px);
+  }
+
+  .wrapper {
+    position: relative;
+    width: 200vw;
   }
 }
 
 .content {
   min-height: calc(100vh - 160px);
-  width: 100%;
+  width: 100vw;
   padding: 24px;
   display: flex;
   align-items: center;
